Apostrophe 2: Ensure "Follow Button" is Readable

--- a/apostrophe-2/style.css
+++ b/apostrophe-2/style.css
@@ -1255,8 +1255,9 @@ a:active {
 	max-width: 100%;
 }
 
-/* Form elements should span the full width. */
+/* Form elements should span the full width and be readable. */
 .widget input {
+	color: inherit;	
 	width: 100%;
 }
 
